--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,7 @@ runs:
         sudo mountpoint -q build/output/debs-beta && sudo fusermount -u build/output/debs-beta || true
         
     - name: Fix permissions
+      shell: bash
       run: |
       
         # make sure no temporally dirs are mounted from previous runs
