--- a/action.yml
+++ b/action.yml
@@ -51,7 +51,7 @@ runs:
               sleep 10
           done
 
-          #[[ -d build ]] && sudo chown -R $USER:$USER build/. || true
+          [[ -d build ]] && sudo chown -R $USER:$USER build/. || true
           [[ -d build/output/images ]] && sudo rm -rf build/output/images/* || true
 
           export TERM=dumb
