--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,8 @@ runs:
         sudo mountpoint -q build/output/debs-beta && sudo fusermount -u build/output/debs-beta || true
         sudo mountpoint -q build/cache/rootfs && sudo fusermount -u build/cache/rootfs || true
         sudo mountpoint -q build/cache/rootfs.upload && sudo fusermount -u build/cache/rootfs.upload || true
-        sudo rm -rf build/output/debs/* build/output/debs-beta/*
+        sudo rm -rf build/output/debs/* build/output/debs-beta/* /var/log/journal || true
+        
         
         
     - name: Fix permissions
